@@ -1,3 +1,5 @@
+05-07-2012 Michael Klapper  <michael.klapper@morphodo.com>
+	* Restructure the field subgroup into seven new fields to improve the user experience.
 
 04-07-2012 Michael Klapper  <michael.klapper@morphodo.com>
 	* Create new icon added to the be_group record on field subgroup
